--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -6,3 +6,16 @@
   }
 
 
+// .bg-dark{
+//     background: #dc3545;
+// }
+
+.cat{
+    background-color: rgb(205, 80, 201);
+    display: block;
+    padding: 10px;
+    border-radius: 5px;
+
+
+}
+
