--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -1,21 +1,248 @@
-.invalid-feedback {
-    display: block;
-    margin-top: 0.25rem;
-    font-size: 0.875em;
-    color: #dc3545;
+/* general*/
+
+// .col{
+//     background: red;
+//     border: 1px solid black;
+//     padding: 10px;
+// }
+.row > * {
+    flex-shrink: 0;
+    width: 100%;
+    max-width: 100%;
+
+    margin-top: var(--bs-gutter-y);
   }
 
+/* Fonts*/
 
-// .bg-dark{
-//     background: #dc3545;
-// }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
 
-.cat{
-    background-color: rgb(205, 80, 201);
-    display: block;
-    padding: 10px;
-    border-radius: 5px;
+/* Variables */
+:root {
+  --font-size: 1rem;
+}
+.ligth-mode {
+  --navbar-color: #222;
+  --navbar-bg-color: #fff;
+}
+.dark-mode {
+  --navbar-color: #fff;
+  --navbar-bg-color: #000;
+}
+
+/* Reset */
+* {
+  box-sizing: border-box;
+  outline: none;
+  margin: 0;
+  padding: 0;
+}
+ul {
+  list-style: none;
+}
+a{
+    text-decoration: none;
+}
+
+/* Basic style */
+body {
+  font-family: 'Poppins', sans-serif;
+}
+.main-content {
+  padding: 1rem;
+}
+/*header*/
+
+.header {
+    border: 1px solid red;
+    min-height: 120px;
+}
+/* Navbar */
+.navbar {
+  display: flex;
+  /* margin-top: 1rem; */
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  padding: 10px;
+  background: var(--navbar-bg-color);
+  color: var(--navbar-color);
+}
+.navbar__links {
+  display: flex;
+}
+.navbar__link {
+  padding: 0 10px;
+}
+.navbar__link > a {
+  text-decoration: none;
+  color: var(--navbar-color);
+}
+.burger {
+  display: none;
+}
+
+/* xl device */
+@media   screen and (min-width: 1000px){
+    .navbar__logo{
+        width: 400px;
+        background: #ededed;
+        /* display: flex; */
+        /* flex-direction: row; */
+
+    }
+    .ligne{
+        width: 500px;
+
+
+    }
+    .ligne h1 {
+        color: green;
+    }
 
 
 }
 
+
+/* Small devices */
+@media screen and (max-width: 767.98px) {
+    .ligne{
+        width: 100px;
+        margin-left:10px ;
+    }
+    .navbar__logo{
+
+        display:flex;
+
+    }
+  .navbar__links {
+    display: flex;
+    flex-direction: column;
+    width: 0;
+    height: calc(100vh - 65px);
+    position: absolute;
+    top: 80px; /*hauteur de la hauteur du menu navbar(height)*/
+    right: 0;
+    background: var(--navbar-bg-color);
+    transition: all .5s ease-in-out;
+  }
+  .show-nav .navbar__links{
+   width: 100%;
+  }
+  .show-nav .navbar__link{
+    transform: translateX(0);
+  }
+  .navbar__link {
+    transform:translateX(101%) ;
+  }
+  .navbar__link > a {
+    display: block;
+    padding: 1rem;
+    font-size: 1.6rem;
+    transition: all 0.4s ease-in-out;
+  }
+
+  .navbar__link > a:hover {
+    padding-left: 2rem;
+    letter-spacing: 5px;
+  }
+/* toggle menu */
+.burger{
+    display: block;
+    position: relative;
+    padding: 0;
+    width: 45px;
+    height: 45px;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+}
+.bar{
+    display: block;
+    width: 45px;
+    height: 4px;
+    background:var(--navbar-color) ;
+    border-radius: 3px;
+
+
+}
+.show-nav .bar{
+    width: 0;
+    background: transparent;
+}
+.bar::before,.bar::after {
+    content: "";
+    width: 45px;
+    height: 4px;
+    position: absolute;
+    left: 0;
+    background:var(--navbar-color) ;
+    border-radius: 3px;
+    transition: all .5s ease-in-out;
+}
+.bar::before{
+    transform: translateY(-12px);
+
+}
+.show-nav .bar::before{
+    transform: rotate(45deg);
+}
+.bar::after{
+    transform:translateY(12px);
+}
+.show-nav .bar::after{
+    transform: rotate(-45deg);
+}
+}
+
+
+
+/* bonus-animations */
+.show-nav .first {
+    transition: all 1s ease-out;
+
+}
+.show-nav .second {
+    transition: all 1.1s ease-out;
+
+}
+.show-nav .third {
+    transition: all 1.2s ease-out;
+
+}
+.show-nav .four {
+    transition: all 1.3s ease-out;
+
+}
+.show-nav .five {
+    transition: all 1.4s ease-out;
+
+}
+
+/* medium devives */
+@media screen and (min-width: 768px) {
+  .navbar__link > a::after {
+    display: block;
+    content: '';
+    width: 0;
+    height: 1px;
+    background: var(--navbar-color);
+    transition: width 0.4s;
+  }
+  .navbar__link:hover > a::after {
+    width: 100%;
+  }
+  .ligne{
+    width: 100%;
+    margin-left:10px ;
+}
+.ligne h1{
+    color: red;
+    font-size: clamp(1rem,2.5vw,1.8rem);
+}
+.navbar__logo{
+
+    display:flex;
+
+}
+}
