--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -1,17 +1,33 @@
 /* general*/
-
-// .col{
-//     background: red;
-//     border: 1px solid black;
-//     padding: 10px;
-// }
+.header__items > div {
+  background-color: #ccc;
+  border: 1px solid #999;
+  height: 90px;
+}
+.header__items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 5fr;
+  height: 88px;
+  align-items: center;
+}
+.header__items .header__title {
+  display: block;
+  height: 90px;
+  line-height: 90px;
+  background: red;
+}
+.header__items.title {
+  display: flex;
+  align-items: center;
+  color: white;
+}
 .row > * {
-    flex-shrink: 0;
-    width: 100%;
-    max-width: 100%;
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
 
-    margin-top: var(--bs-gutter-y);
-  }
+  margin-top: var(--bs-gutter-y);
+}
 
 /* Fonts*/
 
@@ -40,8 +56,8 @@
 ul {
   list-style: none;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
 /* Basic style */
@@ -54,19 +70,20 @@ body {
 /*header*/
 
 .header {
-    border: 1px solid red;
-    min-height: 120px;
+  border: 1px solid red;
+  min-height: 90px;
 }
 /* Navbar */
 .navbar {
   display: flex;
   /* margin-top: 1rem; */
   align-items: center;
-  justify-content: space-between;
-  height: 80px;
+  justify-content: flex-end;
+  height: 90px;
   padding: 10px;
   background: var(--navbar-bg-color);
   color: var(--navbar-color);
+  background: rgb(36, 215, 83);
 }
 .navbar__links {
   display: flex;
@@ -83,57 +100,28 @@ body {
 }
 
 /* xl device */
-@media   screen and (min-width: 1000px){
-    .navbar__logo{
-        width: 400px;
-        background: #ededed;
-        /* display: flex; */
-        /* flex-direction: row; */
-
-    }
-    .ligne{
-        width: 500px;
-
-
-    }
-    .ligne h1 {
-        color: green;
-    }
-
-
-}
-
 
 /* Small devices */
 @media screen and (max-width: 767.98px) {
-    .ligne{
-        width: 100px;
-        margin-left:10px ;
-    }
-    .navbar__logo{
-
-        display:flex;
-
-    }
   .navbar__links {
     display: flex;
     flex-direction: column;
     width: 0;
     height: calc(100vh - 65px);
     position: absolute;
-    top: 80px; /*hauteur de la hauteur du menu navbar(height)*/
+    top: 90px; /*hauteur de la hauteur du menu navbar(height)*/
     right: 0;
     background: var(--navbar-bg-color);
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
   }
-  .show-nav .navbar__links{
-   width: 100%;
+  .show-nav .navbar__links {
+    width: 100%;
   }
-  .show-nav .navbar__link{
+  .show-nav .navbar__link {
     transform: translateX(0);
   }
   .navbar__link {
-    transform:translateX(101%) ;
+    transform: translateX(101%);
   }
   .navbar__link > a {
     display: block;
@@ -146,8 +134,8 @@ body {
     padding-left: 2rem;
     letter-spacing: 5px;
   }
-/* toggle menu */
-.burger{
+  /* toggle menu */
+  .burger {
     display: block;
     position: relative;
     padding: 0;
@@ -156,68 +144,62 @@ body {
     border: none;
     background: transparent;
     cursor: pointer;
-}
-.bar{
+  }
+  .bar {
     display: block;
     width: 45px;
     height: 4px;
-    background:var(--navbar-color) ;
+    background: var(--navbar-color);
     border-radius: 3px;
-
-
-}
-.show-nav .bar{
+  }
+  .show-nav .bar {
     width: 0;
     background: transparent;
-}
-.bar::before,.bar::after {
-    content: "";
+  }
+  .bar::before,
+  .bar::after {
+    content: '';
     width: 45px;
     height: 4px;
     position: absolute;
     left: 0;
-    background:var(--navbar-color) ;
+    background: var(--navbar-color);
     border-radius: 3px;
-    transition: all .5s ease-in-out;
-}
-.bar::before{
+    transition: all 0.5s ease-in-out;
+  }
+  .bar::before {
     transform: translateY(-12px);
-
-}
-.show-nav .bar::before{
+  }
+  .show-nav .bar::before {
     transform: rotate(45deg);
-}
-.bar::after{
-    transform:translateY(12px);
-}
-.show-nav .bar::after{
+  }
+  .bar::after {
+    transform: translateY(12px);
+  }
+  .show-nav .bar::after {
     transform: rotate(-45deg);
+  }
 }
-}
-
-
 
 /* bonus-animations */
 .show-nav .first {
-    transition: all 1s ease-out;
-
+  transition: all 1s ease-out;
 }
 .show-nav .second {
-    transition: all 1.1s ease-out;
-
+  transition: all 1.1s ease-out;
 }
 .show-nav .third {
-    transition: all 1.2s ease-out;
-
+  transition: all 1.2s ease-out;
 }
 .show-nav .four {
-    transition: all 1.3s ease-out;
-
+  transition: all 1.3s ease-out;
 }
 .show-nav .five {
-    transition: all 1.4s ease-out;
-
+  transition: all 1.4s ease-out;
 }
+// .show-nav .six {
+//   transition: all 1.5s ease-out;
+// }
 
 /* medium devives */
 @media screen and (min-width: 768px) {
@@ -232,17 +214,15 @@ body {
   .navbar__link:hover > a::after {
     width: 100%;
   }
-  .ligne{
-    width: 100%;
-    margin-left:10px ;
-}
-.ligne h1{
-    color: red;
-    font-size: clamp(1rem,2.5vw,1.8rem);
-}
-.navbar__logo{
-
-    display:flex;
-
-}
+  //   .ligne {
+  //     width: 100%;
+  //     margin-left: 10px;
+  //   }
+  //   .ligne h1 {
+  //     color: red;
+  //     font-size: clamp(1rem, 2.5vw, 1.8rem);
+  //   }
+  //   .navbar__logo {
+  //     display: flex;
+  //   }
 }
