--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -7,20 +7,27 @@
 .header__items {
   display: grid;
   grid-template-columns: 1fr 1fr 5fr;
-  height: 88px;
+//   height: 90px;
   align-items: center;
 }
 .header__items .header__title {
-  display: block;
-  height: 90px;
-  line-height: 90px;
+  display: table-cell;
+//   height: 90px;
+//   line-height: 90px;
   background: red;
-}
-.header__items.title {
-  display: flex;
-  align-items: center;
   color: white;
+  border: 1px solid black;
+  align-items: center;
 }
+// .header__items .title {
+//   display: flex;
+//   align-items: center;
+
+// }
+// .title{
+//     color: #fff;
+//     border: 1px solid black;
+// }
 .row > * {
   flex-shrink: 0;
   width: 100%;
