--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -1,41 +1,8 @@
 /* general*/
-.header__items > div {
-//   background-color: #ccc;
-//   border: 1px solid #999;
-  height: 90px;
+
+h1{
+    font-weight: bold;
 }
-.header__items {
-  display: grid;
-  grid-template-columns: 1fr 1fr 5fr;
-//   height: 90px;
-  align-items: center;
-}
-.header__items .header__title {
-  display: table-cell;
-//   height: 90px;
-//   line-height: 90px;
-
-
-
-  align-items: center;
-}
-// .header__items .title {
-//   display: flex;
-//   align-items: center;
-
-// }
-// .title{
-//     color: #fff;
-//     border: 1px solid black;
-// }
-.row > * {
-  flex-shrink: 0;
-  width: 100%;
-  max-width: 100%;
-
-  margin-top: var(--bs-gutter-y);
-}
-
 /* Fonts*/
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
@@ -85,7 +52,7 @@ body {
   display: flex;
   /* margin-top: 1rem; */
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   height: 90px;
   padding: 10px;
   background: var(--navbar-bg-color);
@@ -107,9 +74,28 @@ body {
 }
 
 /* xl device */
+@media   screen and (min-width: 1000px){
+    .navbar__logo{
+        width: 400px;
+    }
+    .ligne{
+        width: 36rem;
+    }
 
+
+
+}
 /* Small devices */
 @media screen and (max-width: 767.98px) {
+    .ligne {
+        width: 9rem;
+        margin-left: 10px;
+    }
+    .navbar__logo{
+
+        display:flex;
+
+    }
   .navbar__links {
     display: flex;
     flex-direction: column;
@@ -221,15 +207,16 @@ body {
   .navbar__link:hover > a::after {
     width: 100%;
   }
-  //   .ligne {
-  //     width: 100%;
-  //     margin-left: 10px;
-  //   }
-  //   .ligne h1 {
-  //     color: red;
-  //     font-size: clamp(1rem, 2.5vw, 1.8rem);
-  //   }
-  //   .navbar__logo {
-  //     display: flex;
-  //   }
+    .ligne {
+      width: 9rem;
+      margin-left: 10px;
+    }
+    .ligne h1 {
+
+      font-size: clamp(1rem, 2.5vw, 1.8rem);
+      font-weight: bold;
+    }
+    .navbar__logo {
+      display: flex;
+    }
 }
