--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -1,7 +1,14 @@
 /* general*/
+// #container-fluid{
+//     border: 1px solid black;
 
+
+// }
 h1{
     font-weight: bold;
+}
+p{
+    font-size: 1rem;
 }
 /* Fonts*/
 
@@ -57,6 +64,7 @@ body {
   padding: 10px;
   background: var(--navbar-bg-color);
   color: var(--navbar-color);
+  z-index: 1;
 
 }
 .navbar__links {
@@ -109,6 +117,8 @@ body {
   }
   .show-nav .navbar__links {
     width: 100%;
+    background: red;
+
   }
   .show-nav .navbar__link {
     transform: translateX(0);
@@ -220,3 +230,10 @@ body {
       display: flex;
     }
 }
+#cercle .circle{
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    background: #000;
+}
+
