--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11288,259 +11288,17 @@ textarea.form-control-lg {
   }
 }
 /* general*/
-h1, .h1 {
-  font-weight: bold;
-}
-
-p {
-  font-size: 1rem;
-}
-
 /* Fonts*/
 /* Variables */
-:root {
-  --font-size: 1rem;
-}
-
-.ligth-mode {
-  --navbar-color: #222;
-  --navbar-bg-color: #fff;
-}
-
-.dark-mode {
-  --navbar-color: #fff;
-  --navbar-bg-color: #000;
-}
-
 /* Reset */
-* {
-  box-sizing: border-box;
-  outline: none;
-  margin: 0;
-  padding: 0;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
 /* Basic style */
-body {
-  font-family: "Poppins", sans-serif;
-}
-
-.main-content {
-  padding: 1rem;
-}
-
-/*header*/
-.header {
-  min-height: 90px;
-}
-
 /* Navbar */
-.navbar {
-  display: flex;
-  /* margin-top: 1rem; */
-  align-items: center;
-  justify-content: space-between;
-  height: 90px;
-  padding: 10px;
-  background: var(--navbar-bg-color);
-  color: var(--navbar-color);
-  z-index: 1;
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
 }
 
-.navbar__links {
-  display: flex;
-}
-
-.navbar__link {
-  padding: 0 10px;
-}
-
-.navbar__link > a {
-  text-decoration: none;
-  color: var(--navbar-color);
-}
-
-.burger {
-  display: none;
-}
-
-/* xl device */
-@media screen and (min-width: 1000px) {
-  .navbar__logo {
-    width: 400px;
-  }
-
-  .ligne {
-    width: 36rem;
-  }
-}
-/* Small devices */
-@media screen and (max-width: 767.98px) {
-  .ligne {
-    width: 9rem;
-    margin-left: 10px;
-  }
-
-  .navbar__logo {
-    display: flex;
-  }
-
-  .navbar__links {
-    display: flex;
-    flex-direction: column;
-    width: 0;
-    height: calc(100vh - 65px);
-    position: absolute;
-    top: 90px;
-    /*hauteur de la hauteur du menu navbar(height)*/
-    right: 0;
-    background: var(--navbar-bg-color);
-    transition: all 0.5s ease-in-out;
-  }
-
-  .show-nav .navbar__links {
-    width: 100%;
-    background: red;
-  }
-
-  .show-nav .navbar__link {
-    transform: translateX(0);
-  }
-
-  .navbar__link {
-    transform: translateX(101%);
-  }
-
-  .navbar__link > a {
-    display: block;
-    padding: 1rem;
-    font-size: 1.6rem;
-    transition: all 0.4s ease-in-out;
-  }
-
-  .navbar__link > a:hover {
-    padding-left: 2rem;
-    letter-spacing: 5px;
-  }
-
-  /* toggle menu */
-  .burger {
-    display: block;
-    position: relative;
-    padding: 0;
-    width: 45px;
-    height: 45px;
-    border: none;
-    background: transparent;
-    cursor: pointer;
-  }
-
-  .bar {
-    display: block;
-    width: 45px;
-    height: 4px;
-    background: var(--navbar-color);
-    border-radius: 3px;
-  }
-
-  .show-nav .bar {
-    width: 0;
-    background: transparent;
-  }
-
-  .bar::before,
-.bar::after {
-    content: "";
-    width: 45px;
-    height: 4px;
-    position: absolute;
-    left: 0;
-    background: var(--navbar-color);
-    border-radius: 3px;
-    transition: all 0.5s ease-in-out;
-  }
-
-  .bar::before {
-    transform: translateY(-12px);
-  }
-
-  .show-nav .bar::before {
-    transform: rotate(45deg);
-  }
-
-  .bar::after {
-    transform: translateY(12px);
-  }
-
-  .show-nav .bar::after {
-    transform: rotate(-45deg);
-  }
-}
-/* bonus-animations */
-.show-nav .first {
-  transition: all 1s ease-out;
-}
-
-.show-nav .second {
-  transition: all 1.1s ease-out;
-}
-
-.show-nav .third {
-  transition: all 1.2s ease-out;
-}
-
-.show-nav .four {
-  transition: all 1.3s ease-out;
-}
-
-.show-nav .five {
-  transition: all 1.4s ease-out;
-}
-
-.show-nav .six {
-  transition: all 1.5s ease-out;
-}
-
-/* medium devives */
-@media screen and (min-width: 768px) {
-  .navbar__link > a::after {
-    display: block;
-    content: "";
-    width: 0;
-    height: 1px;
-    background: var(--navbar-color);
-    transition: width 0.4s;
-  }
-
-  .navbar__link:hover > a::after {
-    width: 100%;
-  }
-
-  .ligne {
-    width: 9rem;
-    margin-left: 10px;
-  }
-
-  .ligne h1, .ligne .h1 {
-    font-size: clamp(1rem, 2.5vw, 1.8rem);
-    font-weight: bold;
-  }
-
-  .navbar__logo {
-    display: flex;
-  }
-}
-#cercle .circle {
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-  background: #000;
+.navbar .navbar-collapse {
+  text-align: center;
 }
