--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -7,17 +7,17 @@
 
 
 @media screen and (min-width: 768px) {
-    body{
-        background: green;
-    }
+    // body{
+    //     background: green;
+    // }
 
 
 }
 @media screen and (max-width: 767.98px) {
 
-    body{
-        background: rgb(11, 0, 128);
-    }
+    // body{
+    //     background: rgb(11, 0, 128);
+    // }
 
 }
 // @media screen and (min-width: 1200px  ){
