--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11288,3 +11288,18 @@ textarea.form-control-lg {
   }
 }
 /* general*/
+@media screen and (min-width: 768px) {
+  body {
+    background: green;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  body {
+    background: #0b0080;
+  }
+}
+@media screen and (max-width: 1000px) {
+  body {
+    background: yellow;
+  }
+}
