--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11290,16 +11290,51 @@ textarea.form-control-lg {
 /* general*/
 @media screen and (min-width: 768px) {
   body {
-    background: green;
+    background: #008075;
   }
 }
 @media screen and (max-width: 767.98px) {
   body {
     background: #0b0080;
   }
-}
-@media screen and (max-width: 1000px) {
-  body {
-    background: yellow;
+
+  .responsive-table-line td:before {
+    content: attr(data-title);
+  }
+
+  .responsive-table-line table,
+.responsive-table-line thead,
+.responsive-table-line tbody,
+.responsive-table-line th,
+.responsive-table-line td,
+.responsive-table-line tr {
+    display: block;
+  }
+
+  .responsive-table-line thead tr {
+    display: none;
+  }
+
+  .responsive-table-line td {
+    position: relative;
+    border: 0px solid transparent;
+    padding-left: 50% !important;
+    white-space: normal;
+    text-align: right;
+  }
+
+  .responsive-table-line td:before {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 45%;
+    padding-right: 15px;
+    height: 100%;
+    white-space: nowrap;
+    text-overflow: ellipsis !important;
+    overflow: hidden !important;
+    text-align: left;
+    background-color: #f8f8f8;
+    padding: 2px;
   }
 }
