--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -7,17 +7,17 @@
 
 
 @media screen and (min-width: 768px) {
-    body{
-        background: rgb(0, 128, 117);
-    }
+    // body{
+    //     background: rgb(0, 128, 117);
+    // }
 
 
 }
 @media screen and (max-width: 767.98px) {
 
-    body{
-        background: rgb(11, 0, 128);
-    }
+    // body{
+    //     background: rgb(11, 0, 128);
+    // }
     .responsive-table-line td:before { content: attr(data-title); }
 
 	.responsive-table-line table,
