--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11289,6 +11289,10 @@ textarea.form-control-lg {
 }
 /* general*/
 @media screen and (max-width: 767.98px) {
+  .h1 {
+    font-size: 2rem;
+  }
+
   .responsive-table-line td:before {
     content: attr(data-title);
   }
