--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -14,6 +14,10 @@
 
 }
 @media screen and (max-width: 767.98px) {
+    .h1{
+
+        font-size: 2rem;
+    }
 
     // body{
     //     background: rgb(11, 0, 128);
