--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11288,9 +11288,14 @@ textarea.form-control-lg {
   }
 }
 /* general*/
+.h1 {
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+
 @media screen and (max-width: 767.98px) {
   .h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .responsive-table-line td:before {
