--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11293,6 +11293,10 @@ textarea.form-control-lg {
   font-weight: 400;
 }
 
+.h2 {
+  font-size: 2rem;
+}
+
 @media screen and (max-width: 767.98px) {
   .h1 {
     font-size: 1.5rem;
