--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -4,6 +4,9 @@
     font-size: 2.5rem;
     font-weight: 400;
 }
+.h2{
+    font-size: 2rem;
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
 
