--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -7,6 +7,9 @@
 .h2{
     font-size: 2rem;
 }
+.grey{
+    background: #e5e6e8;
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
 
